--- a/openplanetary.bib
+++ b/openplanetary.bib
@@ -15,3 +15,18 @@ booktitle = {AAS/Division for Planetary Sciences Meeting Abstracts \#48},
    adsurl = {http://adsabs.harvard.edu/abs/2016DPS....4841908M},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Manaud2017epsc,
+   author = {{Manaud}, N. and {Nass}, A. and {Lewando}, M. and {van Gasselt}, S. and 
+	{Rossi}, A.~P. and {Hare}, T. and {Carter}, J. and {Hargitai}, H.
+	},
+    title = "{OpenPlanetaryMap: Building the first Open Planetary Mapping and Social platform for researchers, educators, storytellers, and the general public}",
+  journal = {European Planetary Science Congress},
+     year = 2017,
+    month = sep,
+   volume = 11,
+      eid = {EPSC2017-27},
+    pages = {EPSC2017-27},
+   adsurl = {http://adsabs.harvard.edu/abs/2017EPSC...11...27M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
