updated with medium article

--- a/openplanetary.bib
+++ b/openplanetary.bib
@@ -1,3 +1,4 @@
+% Encoding: UTF-8
 
 @INPROCEEDINGS{Manaud2016dps,
    author = {{Manaud}, N. and {Rossi}, A.~P. and {Hare}, T. and {Aye}, M. and 
@@ -16,17 +17,34 @@ booktitle = {AAS/Division for Planetary Sciences Meeting Abstracts \#48},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{Manaud2017epsc,
-   author = {{Manaud}, N. and {Nass}, A. and {Lewando}, M. and {van Gasselt}, S. and 
-	{Rossi}, A.~P. and {Hare}, T. and {Carter}, J. and {Hargitai}, H.
-	},
-    title = "{OpenPlanetaryMap: Building the first Open Planetary Mapping and Social platform for researchers, educators, storytellers, and the general public}",
-  journal = {European Planetary Science Congress},
-     year = 2017,
-    month = sep,
-   volume = 11,
-      eid = {EPSC2017-27},
-    pages = {EPSC2017-27},
-   adsurl = {http://adsabs.harvard.edu/abs/2017EPSC...11...27M},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@InProceedings{Manaud2017epsc,
+  author    = {{Manaud}, N. and {Nass}, A. and {Lewando}, M. and {van Gasselt}, S. and {Rossi}, A.~P. and {Hare}, T. and {Carter}, J. and {Hargitai}, H.},
+  title     = {{OpenPlanetaryMap: Building the first Open Planetary Mapping and Social platform for researchers, educators, storytellers, and the general public}},
+  booktitle = {European Planetary Science Congress},
+  year      = {2017},
+  volume    = {11},
+  pages     = {EPSC2017-27},
+  month     = sep,
+  adsnote   = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl    = {http://adsabs.harvard.edu/abs/2017EPSC...11...27M},
+  eid       = {EPSC2017-27},
+  journal   = {European Planetary Science Congress},
 }
+
+@InProceedings{Manaud2018,
+  author    = {Nicolas Manaud and Angelo Pio Rossi and Chase Million and Trent Hare and Stephan van Gasselt and Mario d'Amore and Alessandro Frigeri and Baptiste Cecconi and Michael Aye and Jonathan McAuliffe and Angelo Zinzi},
+  title     = {OpenPlanetary: An Open Science Community and Framework for Planetary Scientists and Developers},
+  booktitle = {JpGU2018},
+  year      = {2018},
+  address   = {Chiba, Japan},
+  month     = may,
+}
+
+@Unpublished{Manaud2017medium,
+  author = {Nicolas Manaud},
+  title  = {OpenPlanetary Data Café at EPSC 2017},
+  note   = {retreived online},
+  url    = {https://medium.com/openplanetary/openplanetary-data-caf%C3%A9-at-epsc-2017-95d4cf90cdd8},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
